--- a/src/html/proyectos-p2.html
+++ b/src/html/proyectos-p2.html
@@ -37,12 +37,10 @@
         </div>
         {% endmacro %}
         <div class="row gh-1 gv-1 isotope-grid">
-            {{ portfolio_grid('nessie', 'figuras') }}
-            {{ portfolio_grid('ferrariland', 'temas') }}
-            {{ portfolio_grid('garzas', 'figuras') }}
-            {{ portfolio_grid('katmandu', 'parques') }}
-            {{ portfolio_grid('capitel', 'parques') }}
-            {{ portfolio_grid('moon', 'temas') }}
+            {{ portfolio_grid('row', 'temas') }}
+            {{ portfolio_grid('enigma', 'temas') }}
+            {{ portfolio_grid('eurocamping', 'minigolf') }}
+            {{ portfolio_grid('ballena', 'figuras') }}
         </div>
     </div>
 
