--- a/src/html/proyectos.html
+++ b/src/html/proyectos.html
@@ -37,6 +37,7 @@
         </div>
         {% endmacro %}
         <div class="row gh-1 gv-1 isotope-grid">
+            {{ portfolio_grid('bicilab', 'temas') }}
             {{ portfolio_grid('nessie', 'figuras') }}
             {{ portfolio_grid('ferrariland', 'temas') }}
             {{ portfolio_grid('garzas', 'figuras') }}
