--- a/src/html/BiciLabMostrador.html
+++ b/src/html/BiciLabMostrador.html
@@ -1,4 +1,4 @@
-{% set page_title = 'Eurocamping' %}
+{% set page_title = 'LXH BiciLab Mostrador' %}
 {% set navbar_fixed = true %}
 {% set navbar_dark = true %}
 {% set navbar_expand = true %}
@@ -11,14 +11,13 @@
 
 
 {% macro image_portfolio(src="", classes="", gallery="") %}
-
 <a href="{{ src[1] }}" class="gallery-item{{ ' ' + classes if classes }}" data-fancybox="{{ gallery }}" data-animation-effect="fade">
     <img src="{{ src[0] }}" alt="">
 </a>
 {% endmacro %}
 
 {% macro image_portfolio_init(name="", classes="", gallery="gallery-1") %}
-    {{ image_portfolio(single_portfolio_images.style_5_7[name], classes=classes, gallery=gallery) }}
+    {{ image_portfolio(single_portfolio_images.style_5_9[name], classes=classes, gallery=gallery) }}
 {% endmacro %}
 
 
@@ -26,13 +25,13 @@
 <div class="py-160 min-vh-100 d-flex align-items-center position-relative">
     <div class="background">
         <div class="background-image jarallax" data-jarallax data-speed="0.8">
-            <img src="{{ single_portfolio_images.style_5_7.banner }}" class="jarallax-img" alt="">
+            <img src="{{ single_portfolio_images.style_5_9.banner }}" class="jarallax-img" alt="">
         </div>
         <div class="background-color" style="background-color: rgb(14, 14, 14, .2);"></div>
     </div>
 
     <div class="container text-center">
-        <h1 class="text-white mb-0 show-on-scroll" data-show-duration="700" data-show-distance="10">Eurocamping</h1>
+        <h1 class="text-white mb-0 show-on-scroll" data-show-duration="700" data-show-distance="10">Mostrador BiciLab</h1>
     </div>
 </div>
 
@@ -47,19 +46,19 @@
         <div class="row gv-3 justify-content-center">
             <div class="col-12 col-lg-7 text-center">
                 <h2 class="h3 mb-30 pb-10 mt-n10 show-on-scroll" data-show-duration="500" data-show-distance="10">Sobre el proyecto</h2>
-                <p class="mb-0 show-on-scroll" data-show-duration="500" data-show-distance="10" data-show-delay="150">En nuestro proyecto de minigolf en Eurocamping, hemos creado un espacio al aire libre diseñado para ofrecer una experiencia única y envolvente. Cada hoyo ha sido cuidadosamente elaborado para garantizar diversión y desafío, con paisajes temáticos, formaciones decorativas y un diseño atractivo para jugadores de todas las edades.</p>
+                <p class="mb-0 show-on-scroll" data-show-duration="500" data-show-distance="10" data-show-delay="150">En este proyecto desarrollamos el mostrador principal del espacio BiciLab, una pieza escultórica realizada en fibra de vidrio de alto rendimiento. Este material fue seleccionado por su gran resistencia, versatilidad formal y durabilidad en entornos de uso intensivo. El diseño orgánico y fluido del mostrador se integra armónicamente con el lenguaje contemporáneo del museo, sirviendo como punto de acogida y referencia para los visitantes. El resultado es una pieza única que combina estética, funcionalidad y tecnología aplicada al diseño espacial.</p>
             </div>
             <div class="col-12 col-lg-10 show-on-scroll" data-show-duration="500" data-show-distance="10" data-show-delay="300">
                 <hr class="mt-0 mb-30">
                 <div class="row justify-content-around gh-1">
                     <div class="col-auto mb-8">
-                        <span class="fw-medium me-8">Fecha:</span> Octubre, 2023
+                        <span class="fw-medium me-8">Fecha:</span> Junio 21, 2018
                     </div>
                     <div class="col-auto mb-8">
-                        <span class="fw-medium me-8">Categoria:</span> Minigolf
+                        <span class="fw-medium me-8">Categoria:</span> Arquitectura y diseño
                     </div>
                     <div class="col-auto mb-8">
-                        <span class="fw-medium me-8">Cliente:</span> Eurocamping
+                        <span class="fw-medium me-8">Cliente:</span> BiciLab
                     </div>
                     
                 </div>
@@ -80,8 +79,6 @@
                 {{ slide_project('04') }}
                 {{ slide_project('05') }}
                 {{ slide_project('06') }}
-                {{ slide_project('07') }}
-                {{ slide_project('08') }}
             </div>
         </div>
 
@@ -91,9 +88,9 @@
 
 <div class="container mt-160">
     <div class="page-navigation">
-        <a href="ballena.html" class="btn btn-clean">{{ icon.arrow_left | replace(' width', ' class="icon-arrow icon-arrow-left" width') | safe }}anterior<span class="d-none d-sm-inline"> proyecto</span></a>
-        <a href="proyectos.html" class="btn btn-light btn-circle btn-m">todos</a>
-        <a href="enigma.html" class="btn btn-clean">siguiente<span class="d-none d-sm-inline"> proyecto</span>{{ icon.arrow_right | replace(' width', ' class="icon-arrow icon-arrow-right" width') | safe }}</a>
+        <a href="nessie.html" class="btn btn-clean">{{ icon.arrow_left | replace(' width', ' class="icon-arrow icon-arrow-left" width') | safe }}anterior<span class="d-none d-sm-inline"> proyecto</span></a>
+        <a href="portfolio-col-2-style-6.html" class="btn btn-light btn-circle btn-m">todos</a>
+        <a href="garzas.html" class="btn btn-clean">siguiente<span class="d-none d-sm-inline"> proyecto</span>{{ icon.arrow_right | replace(' width', ' class="icon-arrow icon-arrow-right" width') | safe }}</a>
     </div>
 </div>
 {% endblock %}
