--- a/src/html/proyectos.html
+++ b/src/html/proyectos.html
@@ -44,12 +44,17 @@
             {{ portfolio_grid('katmandu', 'parques') }}
             {{ portfolio_grid('capitel', 'parques') }}
             {{ portfolio_grid('moon', 'temas') }}
+            {{ portfolio_grid('row', 'temas') }}
+            {{ portfolio_grid('enigma', 'temas') }}
+            {{ portfolio_grid('eurocamping', 'minigolf') }}
+            {{ portfolio_grid('ballena', 'figuras') }}
+
+            <!--{{ portfolio_grid('breakfast', 'parques') }}-->
         </div>
     </div>
 
-    <div class="page-navigation justify-content-center mt-100 mb-160">
-        <a href="proyectos.html" class="btn btn-light btn-circle btn-m">1</a>
-        <a href="proyectos-p2.html" class="btn btn-light btn-circle btn-m">2</a>
+    <div class="text-center mt-100 mb-160">
+        <a href="#" class="btn btn-circle btn-light btn-lg">subir</a>
     </div>
 </div>
 {% endblock %}
