--- a/src/html/proyectos.html
+++ b/src/html/proyectos.html
@@ -37,6 +37,7 @@
         </div>
         {% endmacro %}
         <div class="row gh-1 gv-1 isotope-grid">
+            {{ portfolio_grid('ballena', 'figuras') }}
             {{ portfolio_grid('bicilab', 'temas') }}
             {{ portfolio_grid('nessie', 'figuras') }}
             {{ portfolio_grid('ferrariland', 'temas') }}
@@ -48,6 +49,7 @@
             {{ portfolio_grid('enigma', 'temas') }}
             {{ portfolio_grid('eurocamping', 'minigolf') }}
             {{ portfolio_grid('ballena', 'figuras') }}
+
 
             <!--{{ portfolio_grid('breakfast', 'parques') }}-->
         </div>
